<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Civilopedia V</string>

    <!-- List of drawer items -->
    <string-array name="civ_categories">
        <item>Technologies</item>
        <item>Units</item>
        <item>Buildings</item>
        <item>Wonders</item>
        <item>Religion</item>
        <item>Social Policies</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- About menu and activity -->
    <string name="menu_about">About</string>
    <string name="about_name">About Civilopedia V</string>
    <string name="about_buy_civilization">BUY CIVILIZATION:</string>
    <string name="about_buy_civilization_v">Buy Civilization V</string>
    <string name="about_buy_civilization_bnw">Buy Civilization V: Brave New World</string>
    <string name="about_copyright_heading">COPYRIGHT:</string>
    <string name="about_copyright">
        The graphics and game text are extracted from the game itself
        and are owned by Firaxis Games, the developer of Civilization V.
        This application is not affiliated with or endorsed by Firaxis Games.
    </string>
    <string name="about_source_url_heading">SOURCE CODE:</string>
    <string name="about_source_url">https://github.com/davidfischer/civilopedia-v</string>
    <string name="about_opensource_heading">OPEN SOURCE:</string>
    <string name="about_opensource_commonslang">
        This software uses the Apache Commons Lang library which is
        licensed under the Apache License Version 2.0.
    </string>
    <string name="about_opensource_commonslang_url">
        http://www.apache.org/licenses/LICENSE-2.0
    </string>

    <!-- Affiliate information -->
    <string name="affiliate_civ5_bravenewworld_url">
        http://www.amazon.com/gp/product/B00CYOHL48/ref=as_li_qf_sp_asin_il?ie=UTF8&amp;camp=1789&amp;creative=9325&amp;creativeASIN=B00CYOHL48&amp;linkCode=as2&amp;tag=mygipa-20
    </string>
    <string name="affiliate_civ5_goldedition_url">
        http://www.amazon.com/gp/product/B00BCNV1CA/ref=as_li_qf_sp_asin_tl?ie=UTF8&amp;camp=1789&amp;creative=9325&amp;creativeASIN=B00BCNV1CA&amp;linkCode=as2&amp;tag=mygipa-20
    </string>
</resources>
