<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8sp"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/about_buy_civilization" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:contentDescription="@string/about_buy_civilization_v"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/civ5_goldedition"
                android:onClick="affiliateLink"
                android:tag="@string/affiliate_civ5_goldedition_url" />
            <ImageView
                android:contentDescription="@string/about_buy_civilization_bnw"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitEnd"
                android:src="@drawable/civ5_bravenewworld"
                android:onClick="affiliateLink"
                android:tag="@string/affiliate_civ5_bravenewworld_url" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8sp"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/about_copyright_heading" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:autoLink="web"
            android:text="@string/about_copyright" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8sp"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/about_source_url_heading" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:autoLink="all"
            android:textSize="12sp"
            android:text="@string/about_source_url" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8sp"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/about_opensource_heading" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:autoLink="all"
            android:textSize="12sp"
            android:text="@string/about_opensource_commonslang" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:autoLink="all"
            android:textSize="12sp"
            android:text="@string/about_opensource_commonslang_url" />
    </LinearLayout>
</ScrollView>
